<resources>
    <string name="app_name">The Movie Log</string>
    <string name="error">Oops! Sorry…</string>
    <string name="understood">Understood!</string>
    <string name="network_error">Network error! Check your connection</string>
    <string name="server_error">Server unavailable, sorry!</string>
    <string name="general_error">Unexpected error occurred.</string>
    <string name="feature_error">Unexpected error occurred. Try again later.</string>
    <string name="movies_loaded">Movies loaded!</string>

    <!--    HOME-->
    <string name="core_upcoming_movies">Upcoming Movies</string>
    <string name="core_popular_movies">Popular Movies</string>
    <string name="core_now_playing_movies">Now Playing</string>
    <string name="core_top_rated_movies">Top Rated</string>
    <string name="core_see_all">See All  ></string>

    <plurals name="votes">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>
</resources>